service-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: service-ingress
spec:
  rules:
  - host: kubeserve.example.com
    http:
      paths:
      - backend:
          serviceName: kubeserve2
          servicePort: 80
  - host: app.example.com
      paths:
      - backend:
        serviceName: nginx
        servicePort: 80
  - http:
    paths:
    - backend:
      serviceName: http
      servicePort: 80
